add env for the iot endpoint

--- a/amplify.yml
+++ b/amplify.yml
@@ -18,6 +18,7 @@ frontend:
         - echo "VITE_IDENTITY_POOL_ID=$bc_IDENTITY_POOL_ID" >> .env
         - echo "VITE_USER_POOL_ID=$bc_USER_POOL_ID" >> .env
         - echo "VITE_APP_CLIENT_ID=$bc_APP_CLIENT_ID" >> .env
+        - echo "VITE_IOT_ENDPOINT=$bc_IOT_ENDPOINT" >> .env
         - echo "Printing environmental variables to the console to ensure they are correct"
         - cat .env
         - npm run build
